force-app/main/default/objects/Product_Detail__c/Product_Detail__c.object-meta.xml
<CustomObject>
    <label>Product Detail</label>
    <nameField>
        <displayFormat>PD{0000}</displayFormat>
        <label>Product Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>