force-app/main/default/objects/Product_Detail__c/fields/ATM_Fee_Free__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATM Fee Free</label>
    <type>Checkbox</type>
</CustomField>