force-app/main/default/objects/Product_Detail__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Code</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>