force-app/main/default/objects/Product_Detail__c/fields/Is_Cost_per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Cost_per_Calendar_Month__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Cost per Calendar Month?</label>
    <type>Checkbox</type>
</CustomField>