force-app/main/default/objects/Product_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Details</relationshipLabel>
    <relationshipName>Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>