force-app/main/default/objects/Product_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Is_Cost_per_Calendar_Month__c</columns>
    <columns>Cost_per_Calendar_Month__c</columns>
    <columns>ATM_Fee_Free__c</columns>
    <columns>ATM_Fee_in_other_currencies__c</columns>
    <columns>Card_Replacement_Cost__c</columns>
    <columns>Country_Code__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>